--- a/config/database.yml
+++ b/config/database.yml
@@ -6,3 +6,11 @@ development:
     password: grades
     host: localhost
     encoding: utf8
+production:
+    adapter: postgresql
+    database: grades
+    pool: 5
+    username: grades
+    password: grades
+    host: localhost
+    encoding: utf8
